--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@types/ip": "^1.1.3",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "ip": "^2.0.1",
     "mongoose": "^8.10.0",
     "morgan": "^1.10.0",
     "ts-node": "^10.9.2",
